[gd_scene load_steps=7 format=3 uid="uid://c1wv2bsi2x2ds"]

[ext_resource type="Script" path="res://Main.gd" id="1_6kkpf"]
[ext_resource type="PackedScene" uid="uid://dciksnayixhyf" path="res://pipe.tscn" id="2_6laji"]
[ext_resource type="Texture2D" uid="uid://d38ceuoo614k4" path="res://assets/bg.png" id="3_ggcxm"]
[ext_resource type="PackedScene" uid="uid://cojn53ndc3e7j" path="res://bird.tscn" id="4_188m4"]
[ext_resource type="PackedScene" uid="uid://beinamxgeso8i" path="res://ground.tscn" id="5_drs40"]
[ext_resource type="PackedScene" uid="uid://bpsgpqsfl2n8d" path="res://game_over.tscn" id="6_p5hpg"]

[node name="Main" type="Node2D"]
script = ExtResource("1_6kkpf")
pipe_scene = ExtResource("2_6laji")

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(-2, 10)
texture = ExtResource("3_ggcxm")
offset = Vector2(432, 380)

[node name="Bird" parent="." instance=ExtResource("4_188m4")]

[node name="Ground" parent="." instance=ExtResource("5_drs40")]
z_index = 1

[node name="Piper_timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Score" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 378.0
offset_top = 19.0
offset_right = 447.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "SCORE: 0"

[node name="Game_Over" parent="." instance=ExtResource("6_p5hpg")]

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="Piper_timer" to="." method="_on_piper_timer_timeout"]
[connection signal="restart" from="Game_Over" to="." method="_on_game_over_restart"]
